<resources>
    <string name="app_name">GetFit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="workoutCategories">Workout Categories</string>
    <string name="favoriteVideos">Favorite Videos</string>
    <string name="report">Report</string>
    <string name="workout_details">Workout details</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">1901697706801344</string>
    <string name="fb_login_protocol_scheme">fb1901697706801344</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="logged_in">Your are logged in as : </string>
    <string name="someMotivationForYour">Some motivation for you!</string>
    <string name="bookmarked_video">Your bookmarked video!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="workoutEmpty">Don\'t forget your workout today!!</string>
    <string name="add_widget">Add widget</string>
    <string name="reps">x</string>
    <string name="widget_todays_workout">Todays workout report</string>

    <!-- Content Descriptions-->
    <string name="cd_google_signin">Sing in by your Google account</string>
    <string name="cd_facebook_signin">Sing in by your Facebook account</string>
    <string name="cd_video_card">video card. Play your daily motivational video.</string>
    <string name="cd_reps">Repetitions</string>
    <string name="cd_tick_mark">Green tick</string>
    <string name="cd_completed_in">completed in</string>
    <string name="cd_on">on</string>
    <string name="favorite_videos">Favorite Videos</string>
    <string name="logout">Logout</string>
    <string name="completed">Comleted </string>
    <string name="some_error_occured">Some Error Occurred!</string>
    <string name="no_data_available">No data available!!</string>
    <string name="showing_cached_data">No network. Showing Cached Data.</string>
    <string name="please_wait">Please wait..</string>
    <string name="cancelled">Cancelled.</string>
    <string name="something_went_wrong">Something went wrong. Try again!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="lets_get_fit_again">Welcome back. Lets get fit again!</string>
    <string name="email_already_in_use">It seems this Email is already in use.</string>
    <string name="connection_failed">Connection Failed!</string>

</resources>
