<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.WorkoutDetailsActivity">

     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/appBackground">

 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/height_40_dp">


     <TextView
         android:id="@+id/tvWorkoutName"
         style="@style/CardTextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_16_dp"
         android:layout_marginStart="@dimen/margin_16_dp"
         android:layout_marginTop="@dimen/height_200_dp"
         android:textSize="@dimen/text_size_20_sp"
         app:layout_constraintEnd_toStartOf="@+id/tvReps"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Heel Touch" />

     <Chronometer
         android:id="@+id/cmWorkoutTimer"
         style="@style/CardTextViewStyle"
         android:layout_width="@dimen/margin_100_dp"
         android:layout_height="@dimen/margin_100_dp"
         android:layout_marginEnd="@dimen/margin_50_dp"
         android:layout_marginTop="@dimen/margin_32_dp"
         android:background="@drawable/timer_round_shape"
         android:gravity="center"
         android:padding="@dimen/margin_20_dp"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/text_size_20_sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="00:00" />

     <TextView
         android:id="@+id/tvWorkoutDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_8_dp"
         android:layout_marginStart="@dimen/margin_8_dp"
         android:layout_marginTop="@dimen/margin_32_dp"
         android:paddingLeft="@dimen/margin_50_dp"
         android:paddingRight="@dimen/margin_50_dp"
         tools:text="Lie on the ground with your legs bent and your arms by your side. Slightly lift your upper body off the floor and make your hands alternately reach your heels."
         android:lineSpacingExtra="@dimen/line_spacing_16_sp"
         style="@style/CardTextViewStyle"
         android:textSize="@dimen/text_size_16_sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvWorkoutName" />

     <Button
         android:id="@+id/btnStart"
         style="@style/AppTheme.Buttons"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/height_40_dp"
         android:layout_marginStart="@dimen/height_40_dp"
         android:layout_marginTop="@dimen/margin_50_dp"
         android:text="@string/start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvWorkoutDetails" />

     <Button
         android:id="@+id/btnStop"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/height_40_dp"
         android:layout_marginEnd="@dimen/margin_40_dp"
         android:text="@string/stop"
         style="@style/AppTheme.Buttons"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnStart"
         app:layout_constraintEnd_toEndOf="parent"
         android:enabled="false"/>

     <TextView
         android:id="@+id/tvReps"
         style="@style/CardTextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_8_dp"
         android:textSize="@dimen/text_size_32_sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tvWorkoutName"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="x25" />

     <LinearLayout
         android:id="@+id/llCompleteContainer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_51_dp"
         android:layout_marginBottom="@dimen/margin_8_dp"
         android:layout_marginEnd="@dimen/margin_8_dp"
         android:layout_marginStart="@dimen/margin_8_dp"
         android:layout_marginTop="@dimen/margin_50_dp"
         android:background="@color/black"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="@dimen/margin_5_dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvWorkoutDetails">

         <TextView
             style="@style/CardTextViewStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/completed" />

         <ImageView
             android:layout_width="@dimen/height_40_dp"
             android:layout_height="@dimen/height_40_dp"
             android:layout_marginLeft="@dimen/margin_5_dp"
             android:background="@drawable/tick_icon"
             android:contentDescription="@string/cd_tick_mark" />
     </LinearLayout>
</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
</layout>